fix widh wrap

--- a/2rism/css/styles.css
+++ b/2rism/css/styles.css
@@ -14,8 +14,11 @@ body {
 }
 
 .wrap {
-    width: 1376px;
+    max-width: 1376px;
+    width: 100%;
     margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .wrap_header {
